--- a/src/pages/users/style.css
+++ b/src/pages/users/style.css
@@ -7,3 +7,30 @@
     background: #c3bdf8;
     
 }
+
+
+@-webkit-keyframes flash {
+    from, 50%, to {
+      opacity: 1;
+    }
+  
+    25%, 75% {
+      opacity: 0;
+    }
+  }
+  
+  @keyframes flash {
+    from, 50%, to {
+      opacity: 1;
+    }
+  
+    25%, 75% {
+      opacity: 0;
+    }
+  }
+  
+  .flash {
+    -webkit-animation-name: flash;
+    animation-name: flash;
+  }
+  
